[gd_scene load_steps=14 format=3 uid="uid://wyio71spnsxg"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_wvpe2"]
[ext_resource type="PackedScene" uid="uid://c0ys3g6bvpuwy" path="res://Scenes/player.tscn" id="2_3dhxc"]
[ext_resource type="PackedScene" uid="uid://chryecavfdyyh" path="res://Scenes/enemy.tscn" id="3_u75bi"]
[ext_resource type="AudioStream" uid="uid://cm56lwqtf6bsb" path="res://Assets/Bonus/sfx_laser1.ogg" id="4_06ba1"]
[ext_resource type="PackedScene" uid="uid://cs26t3fj1ctm" path="res://Scenes/diver_enemy.tscn" id="4_c0bgn"]
[ext_resource type="PackedScene" uid="uid://fet5rfmufo0i" path="res://Scenes/hud.tscn" id="4_hnfjv"]
[ext_resource type="AudioStream" uid="uid://cx2lt8kpiyelf" path="res://Assets/Bonus/sfx_shieldDown.ogg" id="5_6wn0d"]
[ext_resource type="AudioStream" uid="uid://cr7nqnk6jdn7t" path="res://Assets/Bonus/sfx_lose.ogg" id="5_er0sm"]
[ext_resource type="PackedScene" uid="uid://c82jcpkckhb6w" path="res://Scenes/game_over_screen.tscn" id="5_nnwal"]
[ext_resource type="Texture2D" uid="uid://b7jc8cnmvaivm" path="res://Assets/Backgrounds/purple.png" id="7_b2d4g"]
[ext_resource type="AudioStream" uid="uid://b1148gy1qcgeb" path="res://Assets/Bonus/sfx_shieldUp.ogg" id="7_cxs7j"]
[ext_resource type="Texture2D" uid="uid://w08ef52ipdw5" path="res://Assets/PNG/Effects/star1.png" id="8_awmaj"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d5bnc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(270, 1, 1)
direction = Vector3(0, -1920, 0)
spread = 1.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
gravity = Vector3(0, 0, 0)

[node name="Game" type="Node2D"]
script = ExtResource("1_wvpe2")
enemy_scenes = Array[PackedScene]([ExtResource("3_u75bi"), ExtResource("4_c0bgn")])

[node name="SFX" type="Node" parent="."]

[node name="LaserSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_06ba1")

[node name="HitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_6wn0d")

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_er0sm")
pitch_scale = 0.7

[node name="RetrySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_cxs7j")
pitch_scale = 0.7

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_hnfjv")]

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_nnwal")]
visible = false

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("2_3dhxc")]
position = Vector2(270, 850)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="PurpleStars" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("7_b2d4g")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="StarParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(270, -50)
amount = 10
process_material = SubResource("ParticleProcessMaterial_d5bnc")
texture = ExtResource("8_awmaj")
lifetime = 3.0
preprocess = 5.0

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
